name:                DyNet
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masashi-y/DyNet#readme
license:             BSD3
license-file:        LICENSE
author:              Masashi Yoshikawa
maintainer:          yoshikawa.masashi.yh8@is.naist.jp
copyright:           Masashi Yoshikawa
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DyNet.Expr,
                       DyNet.Core,
                       DyNet.Internal.Core,
                       DyNet.Internal.Expr,
                       DyNet.Vector
  build-depends:       base >= 4.7 && < 5
  build-tools:         cpphs, c2hs
  extra-libraries:     dynet, dynetc
  extra-lib-dirs:      /Users/masashi-y/dynet.hs/c
  include-dirs:        /Users/masashi-y/dynet.hs/c
  ghc-options:         -cpp -pgmPcpphs -optP--cpp
  default-language:    Haskell2010

executable train-xor
  hs-source-dirs:      examples/xor
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DyNet
  other-modules:       Paths_DyNet
  default-language:    Haskell2010

test-suite DyNet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DyNet
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masashi-y/DyNet
