name:                DyNet
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masashi-y/DyNet#readme
license:             BSD3
license-file:        LICENSE
author:              Masashi Yoshikawa
maintainer:          yoshikawa.masashi.yh8@is.naist.jp
copyright:           Masashi Yoshikawa
category:            Web
build-type:          Custom
extra-source-files:  c/trainer.cpp,
                     c/expr.cpp,
                     c/rnn.cpp,
                     c/dynet.cpp,
                     c/vector.cpp
cabal-version:       >=1.10

custom-setup
    setup-depends:     base >= 4.7 && < 5,
                       Cabal >= 1.10,
                       directory

library
  hs-source-dirs:      src
  exposed-modules:     DyNet.Expr,
                       DyNet.Core,
                       DyNet.RNN,
                       DyNet.Dict,
                       DyNet.Vector,
                       DyNet.Train,
                       DyNet.IO
  other-modules:       DyNet.Internal.Vector,
                       DyNet.Internal.Core,
                       DyNet.Internal.ExpVector,
                       DyNet.Internal.Expr,
                       DyNet.Internal.RNN,
                       DyNet.Internal.Train,
                       DyNet.Internal.IO
  build-depends:       base >= 4.7 && < 5, text, hashtables, hashable
  build-tools:         c2hs
  extra-libraries:     dynetc, dynet
  default-language:    Haskell2010

executable train-xor
  hs-source-dirs:      examples/xor
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DyNet
  other-modules:       Paths_DyNet
  extra-libraries:     dynetc, dynet
  default-language:    Haskell2010

executable train-xor-batch
  hs-source-dirs:      examples/xor-batch
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DyNet
  other-modules:       Paths_DyNet
  extra-libraries:     dynetc, dynet
  default-language:    Haskell2010

executable train-xor-batch-lookup
  hs-source-dirs:      examples/xor-batch-lookup
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DyNet
  other-modules:       Paths_DyNet
  extra-libraries:     dynetc, dynet
  default-language:    Haskell2010

executable lstm_tagger
  hs-source-dirs:      examples/lstm_tagger, examples/utils
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, optparse-declarative, mtl
                     , DyNet
  other-modules:       Paths_DyNet, Utils
  extra-libraries:     dynetc, dynet
  default-language:    Haskell2010

executable treelstm
  hs-source-dirs:      examples/treelstm, examples/utils
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, optparse-declarative, mtl, parsec
                     , DyNet
  other-modules:       Paths_DyNet, Utils
  extra-libraries:     dynetc, dynet
  default-language:    Haskell2010

executable rte
  hs-source-dirs:      examples/rte, examples/utils
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, optparse-declarative, mtl, parsec
                     , DyNet
  other-modules:       Paths_DyNet, Utils
  extra-libraries:     dynetc, dynet
  default-language:    Haskell2010

test-suite DyNet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DyNet
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masashi-y/DyNet
